Bug 49561 - FILEOPEN: Incorrect font settings for Footer, Slide number and Date/Time in PPT format
Summary: FILEOPEN: Incorrect font settings for Footer, Slide number and Date/Time in P...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: medium critical
Assignee: Matus Uzak
URL:
Whiteboard: target:5.2.0
Keywords:
: 48705 56051 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-06 15:05 UTC by Luis Perez
Modified: 2016-10-25 19:02 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen shot of what it should look like. (50.19 KB, image/jpeg)
2012-05-06 15:05 UTC, Luis Perez
Details
Document where Footer has lost its formating (76.00 KB, application/vnd.ms-powerpoint)
2012-05-07 13:54 UTC, Luis Perez
Details
Test file resaved with Powerpoint2010 (133.50 KB, application/vnd.ms-powerpoint)
2016-02-21 12:09 UTC, Laurent Balland
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Perez 2012-05-06 15:05:19 UTC
Created attachment 61109 [details]
Screen shot of what it should look like.

I am using Windows 7 x64, Libreoffice 3.5.3.

I created a Impress document where I set the Footer of the Master to have a font of Stencil. Edit Master. The footer has 4 lines, all centered. The first line is set in STENCIL font, 10 point. The second, third, and forth line are set in Times New Roman, 10.5 point. In addition, the Third and Forth line has the Character > Scaling (Scaling Width) set to 110%. Close Master. Save the document.

Now, open up the Impress document, and you will find that the Footer has lost its formatting.

This is a showstopper for me.
Comment 1 Luis Perez 2012-05-06 15:16:51 UTC
Workaround:

If you save it into .opd format, it seems to keep it settings.




ALSO: Please consider adding a STATUS in BUGZILLA that allows for a setting of "Workaround" so that if a workaround is found, that it is easily visible for all testers and Dev.
Comment 2 Jean-Baptiste Faure 2012-05-06 23:55:03 UTC
(In reply to comment #1)
> Workaround:
> 
> If you save it into .opd format, it seems to keep it settings.

So you saved your slideshow in MS-Powerpoint format ? Which kind ? ppt or pptx ?

Please attach a document showing the problem.

Best regards. JBF
Comment 3 Luis Perez 2012-05-07 13:48:16 UTC
My apologies for the omission.

I have LibreOffice automatically saving to Office format. So for this scenario, it was set to save as PPT. I also tested PPS and Office Open XML PPTX formats which also did not work.
Comment 4 Luis Perez 2012-05-07 13:54:58 UTC
Created attachment 61189 [details]
Document where Footer has lost its formating

Be sure to see the previous attachment of what the footer SHOULD look like (see JPG file https://bugs.freedesktop.org/attachment.cgi?id=61109).  :-)
Comment 5 Roman Eisele 2012-05-08 00:39:03 UTC
This is an Impress issue, therefore set the 'Component' field accordingly. This allows us to remove 'Impress:' from the Summary field.
Comment 6 Jean-Baptiste Faure 2012-05-08 01:01:06 UTC
Confirmed. I modified the master slide of your ppt file (font size 12), saved
the file as odp => OK ; saved again as ppt => formatting are lost.

Workaround in you don't use animation, sound or video in slideshow : work in
OpenDocument format (.odp) and, when finished, export and send the slideshow in
PDF. Keep always the original document in OpenDocument Format (ODF).

Side note: OpenDocument is the native format of LibreOffice, working in MSO
format forces LibO to import from and export to foreign format on each read and
save of the file. So less performance and more problems. 

Best regards. JBF
Comment 7 Luis Perez 2012-05-08 01:09:52 UTC
Thank you Roman. If you have a guide, point me to it so I can learn to 
be more efficient.

Sincerely

Luis Perez
CEO/President/Founder
/Twitter: ilperez/
/TEL: 406.206.4128/

B.I.T.S.
Billings Information Technology Services, LLC
/Technology Sales and 24/7 Support Services
/ 1925 Grand Ave., Ste. 131
Billings, MT 59102-2763
TEL: (406) 545-3110
Technical Support: help@bitsmt.com
Orders/Accounting: accounting@bitsmt.com
Website: http://www.bitsmt.com

/“Be a yardstick of quality. Some people aren’t used to an environment 
where excellence is expected.” - Steve Jobs
///

//
//

On 05/08/2012 01:39 AM, bugzilla-daemon@freedesktop.org wrote:
> https://bugs.freedesktop.org/show_bug.cgi?id=49561
>
> Roman Eisele<bugs@eikota.de>  changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Summary|Impress: Font settings for  |Font settings for the
>                     |the Footer are not being    |Footer are not being saved.
>                     |saved.                      |
>            Component|Libreoffice                 |Presentation
>
> --- Comment #5 from Roman Eisele<bugs@eikota.de>  2012-05-08 00:39:03 PDT ---
> This is an Impress issue, therefore set the 'Component' field accordingly. This
> allows us to remove 'Impress:' from the Summary field.
>
Comment 8 Luis Perez 2012-05-08 01:14:22 UTC
Confirmed. I had done exactly that (saved as OPD then covert to PDF) earlier today and it kept the formatting, pictures (JPG) and also the hyperlinks (which is very good news). PDF looked exactly like the OPD file (filesize was about 30% smaller).

Please let me know when a fix is available. Would love to regression test it.
Comment 9 Rob Snelders 2012-12-02 21:48:05 UTC
*** Bug 56051 has been marked as a duplicate of this bug. ***
Comment 10 Laurent Balland 2015-01-22 08:30:55 UTC
*** Bug 48705 has been marked as a duplicate of this bug. ***
Comment 11 Laurent Balland 2015-01-22 08:34:19 UTC
Confirmed with:
- Version: 4.4.1.0.0+
Build ID: f3ea88ef4431541ef85a26412b71e0e29b5cc529
TinderBox: Win-x86@51-TDF, Branch:libreoffice-4-4, Time: 2015-01-09_11:06:04
Locale: fr_FR
- Version: 4.3.6.1
Build ID: 9629686a67dd1f357477c13325e45a66f3452bb9
- OOo 3.2.0
=> change version to "Inherited from OOo".

Format is correctly saved: if you open your file with MS-PowerPoint, footer is correctly formated. It is when LibO opens file that format is lost.

Same problem apply to Slide number and Date and Time fields.

=> Change Summary to:
FILEOPEN: Incorrect Footer, Slide number and Date/Time format in PPT file
Comment 12 QA Administrators 2016-02-21 08:35:55 UTC Comment hidden (obsolete)
Comment 13 Laurent Balland 2016-02-21 12:09:47 UTC
Created attachment 122846 [details]
Test file resaved with Powerpoint2010

Bug confirmed with Version: 5.0.5.2
Build ID: 55b006a02d247b5f7215fc6ea0fde844b30035b3
Locale : fr-FR (fr_FR)

However, the file seems wrongly formatted:
- open file with PowerPoint2010
- save file with a new name (see attached file)
- open file with LibO 5.0.5
=> file is OK
Comment 14 Commit Notification 2016-05-19 01:46:29 UTC
Matus Uzak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd3ed061de068a03a7c75f093c9a9bd7b6f3ba57

tdf#49561: PPT import: Avoid to override formatting from StyleTextPropAtom

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.