tdf#49561: PPT import: Avoid to override formatting from StyleTextPropAtom

Change-Id: Id874cb369b08eb7f8226413c6541fe6cd18eceaa
Reviewed-on: https://gerrit.libreoffice.org/24662
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>